--- a/LR_6/LR_6/mainwindow.ui
+++ b/LR_6/LR_6/mainwindow.ui
@@ -211,20 +211,16 @@
            </widget>
           </item>
           <item>
-           <spacer name="verticalSpacer_2">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
+           <widget class="QRadioButton" name="arbitraryRadioButton">
+            <property name="font">
+             <font>
+              <pointsize>13</pointsize>
+             </font>
             </property>
-            <property name="sizeType">
-             <enum>QSizePolicy::Fixed</enum>
+            <property name="text">
+             <string>Произвольная область</string>
             </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>5</height>
-             </size>
-            </property>
-           </spacer>
+           </widget>
           </item>
           <item>
            <widget class="QRadioButton" name="seedRadioButton">
