--- a/LR_10/LR_10/mainwindow.ui
+++ b/LR_10/LR_10/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1200</width>
-    <height>650</height>
+    <width>1300</width>
+    <height>750</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,10 +17,10 @@
    <widget class="QSplitter" name="splitter">
     <property name="geometry">
      <rect>
-      <x>780</x>
+      <x>880</x>
       <y>10</y>
       <width>400</width>
-      <height>600</height>
+      <height>700</height>
      </rect>
     </property>
     <property name="orientation">
@@ -90,7 +90,7 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>90</width>
+            <width>70</width>
             <height>20</height>
            </size>
           </property>
@@ -105,27 +105,27 @@
           </property>
           <item>
            <property name="text">
-            <string>placeholder 1</string>
+            <string>z^2 / 5 - x^2 / 5</string>
            </property>
           </item>
           <item>
            <property name="text">
-            <string>placeholder 2</string>
+            <string>exp(sin(sqrt(x*x + z*z)))</string>
            </property>
           </item>
           <item>
            <property name="text">
-            <string>placeholder 3</string>
+            <string>sin(x) * cos(z)</string>
            </property>
           </item>
           <item>
            <property name="text">
-            <string>placeholder 4</string>
+            <string>2 * cos(x * z)</string>
            </property>
           </item>
           <item>
            <property name="text">
-            <string>placeholder 5</string>
+            <string>|sin(x) * sin(z)|</string>
            </property>
           </item>
          </widget>
@@ -140,7 +140,7 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>90</width>
+            <width>70</width>
             <height>20</height>
            </size>
           </property>
@@ -239,13 +239,13 @@
              <number>1</number>
             </property>
             <property name="minimum">
-             <double>-3.000000000000000</double>
+             <double>-10.000000000000000</double>
             </property>
             <property name="maximum">
-             <double>3.000000000000000</double>
+             <double>10.000000000000000</double>
             </property>
             <property name="value">
-             <double>-3.000000000000000</double>
+             <double>-5.000000000000000</double>
             </property>
            </widget>
           </item>
@@ -298,13 +298,13 @@
              <number>1</number>
             </property>
             <property name="minimum">
-             <double>-3.000000000000000</double>
+             <double>-10.000000000000000</double>
             </property>
             <property name="maximum">
-             <double>3.000000000000000</double>
+             <double>10.000000000000000</double>
             </property>
             <property name="value">
-             <double>3.000000000000000</double>
+             <double>5.000000000000000</double>
             </property>
            </widget>
           </item>
@@ -352,6 +352,9 @@
              <font>
               <pointsize>15</pointsize>
              </font>
+            </property>
+            <property name="minimum">
+             <double>0.010000000000000</double>
             </property>
             <property name="maximum">
              <double>1.000000000000000</double>
@@ -433,13 +436,13 @@
              <number>1</number>
             </property>
             <property name="minimum">
-             <double>-3.000000000000000</double>
+             <double>-10.000000000000000</double>
             </property>
             <property name="maximum">
-             <double>3.000000000000000</double>
+             <double>10.000000000000000</double>
             </property>
             <property name="value">
-             <double>-3.000000000000000</double>
+             <double>-5.000000000000000</double>
             </property>
            </widget>
           </item>
@@ -492,16 +495,16 @@
              <number>1</number>
             </property>
             <property name="minimum">
-             <double>-3.000000000000000</double>
+             <double>-10.000000000000000</double>
             </property>
             <property name="maximum">
-             <double>3.000000000000000</double>
+             <double>10.000000000000000</double>
             </property>
             <property name="singleStep">
              <double>1.000000000000000</double>
             </property>
             <property name="value">
-             <double>3.000000000000000</double>
+             <double>5.000000000000000</double>
             </property>
            </widget>
           </item>
@@ -550,8 +553,11 @@
               <pointsize>15</pointsize>
              </font>
             </property>
+            <property name="minimum">
+             <double>0.010000000000000</double>
+            </property>
             <property name="maximum">
-             <double>5.000000000000000</double>
+             <double>1.000000000000000</double>
             </property>
             <property name="singleStep">
              <double>0.050000000000000</double>
@@ -1737,6 +1743,167 @@
       </item>
      </layout>
     </widget>
+    <widget class="QGroupBox" name="groupBox_5">
+     <property name="font">
+      <font>
+       <pointsize>18</pointsize>
+      </font>
+     </property>
+     <property name="title">
+      <string>Масштабирование</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_5">
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_19">
+        <item>
+         <spacer name="horizontalSpacer_39">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Fixed</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>10</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_14">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>15</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>Коэффициент</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_40">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Fixed</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>10</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QSlider" name="sliderK">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>155</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>15</pointsize>
+           </font>
+          </property>
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>100</number>
+          </property>
+          <property name="value">
+           <number>45</number>
+          </property>
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="tickPosition">
+           <enum>QSlider::NoTicks</enum>
+          </property>
+          <property name="tickInterval">
+           <number>10</number>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_41">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Fixed</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>10</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QLabel" name="tetaXLabel_2">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>35</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>15</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>45</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_42">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Fixed</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>10</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
     <widget class="QGroupBox" name="groupBox_3">
      <property name="font">
       <font>
@@ -2111,10 +2278,10 @@
            </font>
           </property>
           <property name="minimum">
-           <number>-180</number>
+           <number>-45</number>
           </property>
           <property name="maximum">
-           <number>180</number>
+           <number>45</number>
           </property>
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
@@ -2213,7 +2380,7 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>115</width>
+            <width>100</width>
             <height>20</height>
            </size>
           </property>
@@ -2241,7 +2408,55 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>115</width>
+            <width>100</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_18">
+        <item>
+         <spacer name="horizontalSpacer_37">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Fixed</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>70</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="resetButton">
+          <property name="font">
+           <font>
+            <pointsize>15</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>Сбросить поворот</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_38">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Fixed</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>70</width>
             <height>20</height>
            </size>
           </property>
@@ -2254,6 +2469,28 @@
    </widget>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>1300</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menu">
+    <property name="title">
+     <string>Клавиши поворотов</string>
+    </property>
+    <addaction name="action"/>
+   </widget>
+   <addaction name="menu"/>
+  </widget>
+  <action name="action">
+   <property name="text">
+    <string>Инструкция</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
@@ -2265,12 +2502,12 @@
    <slot>setNum(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>942</x>
-     <y>450</y>
+     <x>1094</x>
+     <y>435</y>
     </hint>
     <hint type="destinationlabel">
-     <x>1022</x>
-     <y>458</y>
+     <x>1150</x>
+     <y>441</y>
     </hint>
    </hints>
   </connection>
@@ -2281,12 +2518,12 @@
    <slot>setNum(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>917</x>
-     <y>486</y>
+     <x>1076</x>
+     <y>470</y>
     </hint>
     <hint type="destinationlabel">
-     <x>1021</x>
-     <y>488</y>
+     <x>1150</x>
+     <y>476</y>
     </hint>
    </hints>
   </connection>
@@ -2297,12 +2534,28 @@
    <slot>setNum(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>942</x>
-     <y>508</y>
+     <x>1094</x>
+     <y>504</y>
     </hint>
     <hint type="destinationlabel">
-     <x>1027</x>
-     <y>517</y>
+     <x>1150</x>
+     <y>510</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>sliderK</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>tetaXLabel_2</receiver>
+   <slot>setNum(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>777</x>
+     <y>423</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>930</x>
+     <y>426</y>
     </hint>
    </hints>
   </connection>
